; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_filter/deinterlace/extr_merge.c_Merge16BitGeneric.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_filter/deinterlace/extr_merge.c_Merge16BitGeneric.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Merge16BitGeneric(i8* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %9, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = bitcast i8* %15 to i32*
  store i32* %16, i32** %10, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = bitcast i8* %17 to i32*
  store i32* %18, i32** %11, align 8
  %19 = load i64, i64* %8, align 8
  %20 = udiv i64 %19, 2
  store i64 %20, i64* %12, align 8
  br label %21

21:                                               ; preds = %35, %4
  %22 = load i64, i64* %12, align 8
  %23 = icmp ugt i64 %22, 0
  br i1 %23, label %24, label %38

24:                                               ; preds = %21
  %25 = load i32*, i32** %10, align 8
  %26 = getelementptr inbounds i32, i32* %25, i32 1
  store i32* %26, i32** %10, align 8
  %27 = load i32, i32* %25, align 4
  %28 = load i32*, i32** %11, align 8
  %29 = getelementptr inbounds i32, i32* %28, i32 1
  store i32* %29, i32** %11, align 8
  %30 = load i32, i32* %28, align 4
  %31 = add nsw i32 %27, %30
  %32 = ashr i32 %31, 1
  %33 = load i32*, i32** %9, align 8
  %34 = getelementptr inbounds i32, i32* %33, i32 1
  store i32* %34, i32** %9, align 8
  store i32 %32, i32* %33, align 4
  br label %35

35:                                               ; preds = %24
  %36 = load i64, i64* %12, align 8
  %37 = add i64 %36, -1
  store i64 %37, i64* %12, align 8
  br label %21

38:                                               ; preds = %21
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
